SERVER-8117: listDatabases - config/admin db should come from config servers