src/mongo/s/commands_admin.cpp
@@ -1420,6 +1420,11 @@ namespace mongo {
                     continue;
                 }
 
+                if ( name == "config" || name == "admin" ) {
+                    //always get this from the config servers
+                    continue;
+                }
+
                 long long size = i->second;
                 totalSize += size;
 
@@ -1432,7 +1437,7 @@ namespace mongo {
                 bb.append( temp.obj() );
             }
             
-            if ( sizes.find( "config" ) == sizes.end() ){
+            { // get config db from the config servers (first one)
                 scoped_ptr<ScopedDbConnection> conn(
                         ScopedDbConnection::getInternalScopedDbConnection(
                                 configServer.getPrimary().getConnString(), 30));
@@ -1449,6 +1454,27 @@ namespace mongo {
                 }
                 else {
                     bb.append( BSON( "name" << "config" ) );
+                }
+                conn->done();
+            }
+
+            { // get admin db from the config servers (first one)
+                scoped_ptr<ScopedDbConnection> conn(
+                        ScopedDbConnection::getInternalScopedDbConnection(
+                                configServer.getPrimary().getConnString(), 30));
+                BSONObj x;
+                if ( conn->get()->simpleCommand( "admin" , &x , "dbstats" ) ){
+                    BSONObjBuilder b;
+                    b.append( "name" , "admin" );
+                    b.appendBool( "empty" , false );
+                    if ( x["fileSize"].type() )
+                        b.appendAs( x["fileSize"] , "sizeOnDisk" );
+                    else
+                        b.append( "sizeOnDisk" , 1 );
+                    bb.append( b.obj() );
+                }
+                else {
+                    bb.append( BSON( "name" << "admin" ) );
                 }
                 conn->done();
             }
